--- a/flan-T5.ipynb
+++ b/flan-T5.ipynb
@@ -35,7 +35,7 @@
       "metadata": {
         "id": "4Q4hcBEaPQ7m"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "QgdVq7J2I3BF"
       },
@@ -68,13 +68,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "pjSClJnLVMv-",
         "outputId": "05ad867d-a4f0-4ee2-ea16-800e1e75c2fc"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -165,13 +164,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "ujtO1r-ENq7O",
         "outputId": "6b8820d0-2969-4da6-913c-87791bb4ef8c"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -208,13 +206,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "_9Fv5eiANwML",
         "outputId": "4067bc99-3daa-4bde-df80-26adb3c6c1a2"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -243,13 +240,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "SiOekYJAN0JR",
         "outputId": "72595ab5-9044-4cef-d102-9b2054924174"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -272,13 +268,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "a4RT54FMLU7F",
         "outputId": "748ca38c-c9c2-49f3-da14-f4f11791caf3"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -485,13 +480,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "vb6sY1ExMpju",
         "outputId": "c6fd269c-7170-414e-85fc-f1c0222f51c7"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -520,7 +514,7 @@
       "metadata": {
         "id": "Z7GOo5xENNCx"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -539,13 +533,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "TZ3kNsB7PFNU",
         "outputId": "48dcb6a0-bd83-45d7-9f91-ec539e6e91ed"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -599,13 +592,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "MJVJspU7Rmm_",
         "outputId": "5f102c04-b0a3-4a1c-f66a-bd5e00e618ad"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -634,13 +626,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Sz43hdWWKMdY",
         "outputId": "fd976730-c596-49d0-e5e7-1aa5e7d53bee"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -672,7 +663,7 @@
       "metadata": {
         "id": "BtZozkbgX38s"
       },
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -687,13 +678,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "4FJ0WFqq-Vfi",
         "outputId": "0acb0a81-c9f1-4acd-b0d0-22455e668f9f"
       },
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -896,7 +886,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "PART-2 Training the flan-t5 model\n",
+        "PART-2 finetuning the flan-t5 model on SQuAD dataset\n",
         "\n",
         "---\n",
         "\n"
@@ -936,13 +926,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "T7FZZaa9gOFF",
         "outputId": "466d2f7b-6587-4b9c-8c9b-22db476509bf"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -966,13 +955,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "xeXFFbqvBCJb",
         "outputId": "a662d452-eadf-4c94-dc2a-cc66b945b8a9"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -996,13 +984,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "TdhWr1-_gpEZ",
         "outputId": "1b7999c1-04a7-4368-be7a-f684138391ed"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1027,13 +1014,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "4ogmQn1lgyRb",
         "outputId": "2f91d9d0-e037-4705-8a16-37861d903adb"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1060,7 +1046,7 @@
       "metadata": {
         "id": "PisOc3FNg0VS"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1086,7 +1072,7 @@
         "id": "c0RUhLhaEo2r",
         "outputId": "9132e0a1-4dd8-4713-c1f3-f13d3bea5669"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1117,13 +1103,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "YIIqK1ZPngU3",
         "outputId": "3e180f4a-22cd-4249-8ca9-394c70069993"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1234,7 +1219,7 @@
       "metadata": {
         "id": "1zrgJEY91jRe"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1245,7 +1230,7 @@
       "metadata": {
         "id": "YzLGzwbw13e0"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1258,7 +1243,7 @@
       "metadata": {
         "id": "Q3QK7CJM0RKx"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1268,13 +1253,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "-dPhASk6shZE",
         "outputId": "421b631d-1562-4fe5-b96d-6655020de05e"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1350,13 +1334,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "_GWM2uudsDqe",
         "outputId": "9b4448cd-a848-474c-d020-af45d7527ad4"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "metadata": {
@@ -1493,7 +1476,7 @@
         "id": "nvxlfPJc1q2v",
         "outputId": "bc4b662c-7bdd-45ac-8dd6-bb9fc78e6b8c"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1525,7 +1508,7 @@
       "metadata": {
         "id": "RrkKT0PL2CSQ"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1581,7 +1564,7 @@
       "metadata": {
         "id": "WH-JF4933TvD"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1601,12 +1584,11 @@
       "metadata": {
         "id": "-LIauLARZcuo",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "22e808eb-58dc-439d-d295-ceb317a3f81c"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1633,13 +1615,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "WxQeGUOfhYCr",
         "outputId": "56656529-8652-45a1-f2b6-0bfe21326908"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1666,13 +1647,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "cNIlFFV5zOQK",
         "outputId": "3b4c103a-11cb-4790-a882-179776e856f4"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
