--- a/flan-T5.ipynb
+++ b/flan-T5.ipynb
@@ -1314,7 +1314,7 @@
         "\n",
         "    if train_steps%validation_steps == 0:\n",
         "\n",
-        "      model.train()\n",
+        "      model.eval()\n",
         "      val_loss = 0\n",
         "\n",
         "      with torch.no_grad():\n",
